--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ body{
   background-size: cover;
 }
 
-h1,h2,h3, p, button{
+h1,h2,h3,h4, p, button{
   color: lightblue;
   font-family:Georgia, 'Times New Roman', Times, serif;
 }
@@ -153,32 +153,61 @@ button:hover{
   list-style: none;
 }
 
-.alloverCard{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 100%;
-  background: rgba(55, 67, 112, 0.3);
+/* Styles de base pour la carte */
+.card {
+  width: 15vw;
+  height: 25vw;
+  perspective: 1000px; /* Pour créer un effet 3D */
+  cursor: pointer;
 }
 
-.card{
+.card div {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  backface-visibility: hidden; /* Cache l'autre face quand on regarde une face */
+  transition: transform 0.6s ease-in-out; /* Animation de 0.6s pour le flip */
+}
+
+.frontCard{
   position: relative;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  width: 15vw;
-  height: 25vw;
   border-radius: 1.5vw;
   z-index: 3000; 
+  background: rgba(55, 67, 112, 0.2);
   box-shadow: 0.25vw 0.25vw 0.7vw #191921,
               -0.25vw -0.25vw 0.7vw rgb(87, 98, 141);
-
+  transform: rotateY(0deg); /* La face avant est visible par défaut */
 }
 
-.card:hover .cardPic{
+.backCard {
+  border-radius: 1.5vw;
+  background: rgba(55, 67, 112, 0.2);
+  box-shadow: 0.25vw 0.25vw 0.7vw #191921,
+              -0.25vw -0.25vw 0.7vw rgb(87, 98, 141);
+  transform: rotateY(180deg); /* La face arrière est à 180° */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.description{
+  width: 10vw;
+}
+/* Quand la carte est retournée */
+.card.flipped .frontCard {
+  transform: rotateY(-180deg); /* On cache la face avant */
+}
+
+.card.flipped .backCard {
+  transform: rotateY(0deg); /* On montre la face arrière */
+}
+
+.frontCard:hover .cardPic{
   display: flex;
   align-items: center;
   overflow: hidden;
@@ -193,7 +222,7 @@ button:hover{
 
 }
 
-.card:hover{
+.frontCard:hover{
   box-shadow: 0.25vw 0.25vw 0.7vw rgb(87, 98, 141),
   -0.25vw -0.25vw 0.7vw #191921;
   transition: ease-in 0.5s ;
