--- a/src/App.css
+++ b/src/App.css
@@ -20,14 +20,32 @@ body{
   background-size: cover;
 }
 
-h1,h2,h3,h4, p, button{
+h1,h2,h3,h4,ul,p,button{
   color: lightblue;
   font-family:Georgia, 'Times New Roman', Times, serif;
 }
 
 h1{
   font-family:"Major Mono Display", Courier, monospace;
-  font-size: 3vw;
+  font-size: 4vw;
+}
+
+h2{
+  font-size: 1.6vw;
+}
+
+h3, p{
+  font-size: 1vw;
+}
+
+h4{
+  font-size: 0.7vw;
+  text-shadow: 0.1vw 0.1vw 0.1vw #191921;
+}
+
+li{
+  padding: 0.5vw;
+  text-shadow: 0.1vw 0.1vw 0.1vw #191921;
 }
 
 a{
@@ -41,6 +59,7 @@ a:hover{
 }
 
 button{
+  font-size: 0.7vw;
   margin: 0.5vw;
   padding: 0.4vw 1vw 0.4vw 1vw;
   background: rgba(55, 67, 112, 0.2);
@@ -64,6 +83,8 @@ button:hover{
 }
 
 .container{
+  display: flex;
+  justify-content: center;
   background: rgba(55, 67, 112, 0.2);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -72,7 +93,33 @@ button:hover{
   padding: 2vw;
 }
 
+.drawExplanation{
+  width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.drawSample{
+  padding: 1vw;
+  text-align: left;
+  font-size: 0.7vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.selector{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+}
+
 .littleCards-maj{
+  margin: 2vw 0 2vw 0;
   width: 100%;
   display: grid;
   grid-template-columns: repeat(11, 2vw);
@@ -80,16 +127,20 @@ button:hover{
   justify-content: center;
 }
 .littleCards{
+  margin: 2vw 0 2vw 0;
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(13, 2vw);
-  grid-template-rows: repeat(5, 3vw);
+  grid-template-columns: repeat(26, 2vw);
+  grid-template-rows: repeat(2, 3vw);
   justify-content: center;
 }
 
 .littleCard-item{
   width: 1.5vw;
   height: 2.5vw;
+  border-radius: 0.2vw;
+  box-shadow: 0.1vw 0.1vw 0.1vw #191921,
+              -0.1vw -0.1vw 0.1vw #57628d;
 }
 
 .row{
@@ -103,15 +154,48 @@ button:hover{
   justify-content: center;
   align-items: center;
   margin-top: 2vw;
-
 }
-.tarot-layout {
+
+.tarot-layout{
   margin: 2vw;
   display: grid;
   grid-template-columns: repeat(3, 15vw); /* 3 colonnes */
   grid-template-rows: repeat(3, 25vw);    /* 3 lignes */
   gap: 1vw; /* Espacement entre les cartes */
   width: 100%;
+  height: fit-content;
+  justify-content: center;
+}
+
+.cardSample{
+  width: 2.5vw;
+  height: 4.5vw;
+  border-radius: 0.2vw;
+  box-shadow: 0.1vw 0.1vw 0.1vw #191921,
+              -0.1vw -0.1vw 0.1vw #57628d;
+  color: lightblue;
+  font-size: 1.2vw;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  padding-left: 0.2vw;
+}
+.tarot-sample{
+  margin: 2vw;
+  display: grid;
+  grid-template-columns: repeat(3, 2.5vw); /* 3 colonnes */
+  grid-template-rows: repeat(0, 4.5vw);    /* 3 lignes */
+  gap: 1vw; /* Espacement entre les cartes */
+  width: 20%;
+  height: fit-content;
+  justify-content: center;
+
+}
+.tarot-layout-sample {
+  margin: 2vw;
+  display: grid;
+  grid-template-columns: repeat(3, 2.5vw); /* 3 colonnes */
+  grid-template-rows: repeat(3, 4.5vw);    /* 3 lignes */
+  gap: 1vw; /* Espacement entre les cartes */
+  width: 20%;
   height: fit-content;
   justify-content: center;
 }
@@ -154,23 +238,68 @@ button:hover{
 }
 
 /* Styles de base pour la carte */
-.card {
+.card-scene {
   width: 15vw;
   height: 25vw;
   perspective: 1000px; /* Pour créer un effet 3D */
+  backface-visibility: hidden; /* Cache l'autre face quand on regarde une face */
   cursor: pointer;
 }
 
-.card div {
+.card {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  transform-style: preserve-3d;
+  transform: rotateY(0deg); /* Face avant visible au départ */
+  transition: transform 0.6s ease-in-out;
+}
+
+.card--flipped {
+  animation: cardFlip .275s forwards linear;
+}
+
+.card--unflip {
+  animation: cardUnFlip .275s forwards linear;
+}
+
+/* Effet d'apparition des cartes */
+@keyframes cardFlip {
+  0% {
+    transform: rotateZ(0deg) rotateY(180deg);
+  }
+  50% {
+    transform: rotateZ(-10deg) rotateY(90deg);
+  }
+  100% {
+    transform: rotateZ(0deg) rotateY(0deg); /* Face avant visible */
+  }
+}
+
+@keyframes cardUnFlip {
+  0% {
+    transform: rotateZ(0deg) rotateY(0deg);
+  }
+  50% {
+    transform: rotateZ(-10deg) rotateY(90deg);
+  }
+  100% {
+    transform: rotateZ(0deg) rotateY(180deg); /* Face arrière visible */
+  }
+}
+
+.frontCard, .backCard{
+  position: absolute;
   width: 100%;
   height: 100%;
-  position: absolute;
-  backface-visibility: hidden; /* Cache l'autre face quand on regarde une face */
-  transition: transform 0.6s ease-in-out; /* Animation de 0.6s pour le flip */
+  backface-visibility: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .frontCard{
-  position: relative;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
@@ -180,31 +309,23 @@ button:hover{
   z-index: 3000; 
   background: rgba(55, 67, 112, 0.2);
   box-shadow: 0.25vw 0.25vw 0.7vw #191921,
-              -0.25vw -0.25vw 0.7vw rgb(87, 98, 141);
-  transform: rotateY(0deg); /* La face avant est visible par défaut */
+              -0.25vw -0.25vw 0.7vw #57628d;
+  transform: rotateY(180deg); /* La face avant est visible par défaut */
 }
 
 .backCard {
   border-radius: 1.5vw;
   background: rgba(55, 67, 112, 0.2);
   box-shadow: 0.25vw 0.25vw 0.7vw #191921,
-              -0.25vw -0.25vw 0.7vw rgb(87, 98, 141);
-  transform: rotateY(180deg); /* La face arrière est à 180° */
+              -0.25vw -0.25vw 0.7vw #57628d;
+  transform: rotateY(0deg); /* La face arrière est à 180° */
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .description{
-  width: 10vw;
-}
-/* Quand la carte est retournée */
-.card.flipped .frontCard {
-  transform: rotateY(-180deg); /* On cache la face avant */
-}
-
-.card.flipped .backCard {
-  transform: rotateY(0deg); /* On montre la face arrière */
+  width: 13vw;
 }
 
 .frontCard:hover .cardPic{
