--- a/src/App.css
+++ b/src/App.css
@@ -325,7 +325,11 @@ button:hover{
 }
 
 .description{
+  padding: 0;
   width: 13vw;
+  list-style: none;
+  font-size: 1.5vw;
+
 }
 
 .frontCard:hover .cardPic{
@@ -368,11 +372,13 @@ button:hover{
   bottom: 3vw;
   z-index: 200;
   color:transparent;
+  text-shadow: none;
 }
 
 .card:hover .cardName{
   color:lightblue;
   transition: ease-in-out 1s ;
+  text-shadow: inherit;
 }
 
 footer{
